--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,8 @@ p {
   margin-left: 70px;
 }
 
-.socials > .title {
+.socials > .title,
+.subscription > .title {
   margin-bottom: 20px;
 
   font-weight: 700;
@@ -246,6 +247,53 @@ p {
   text-transform: uppercase;
 
   color: var(--white-color);
+}
+
+.subscription {
+  margin-left: auto;
+  margin-top: 12px;
+}
+
+.subscription > .subscription-container {
+  display: flex;
+}
+
+.subscription .email-input {
+  min-width: 358px;
+  padding: 15px 16px;
+
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscription .button {
+  margin-left: 10px;
+  padding: 10px 28px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  background-color: var(--primary-color);
+}
+
+.subscription .icon {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
 }
 
 /* Main for page Studio */
@@ -650,6 +698,80 @@ body.modal-open {
   height: 18px;
 
   transition: color var(--animation-duration) var(--animation-function);
+}
+
+.feedback {
+}
+
+.feedback > .form-title {
+  margin-bottom: 30px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+
+  color: var(--title-text-color);
+}
+
+.feedback > .form-group {
+  position: relative;
+}
+
+.feedback > .form-group:not(:last-of-type) {
+  margin-bottom: 28px;
+}
+
+.feedback .form-label {
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: var(--black-color);
+}
+
+.feedback .label-text {
+  position: absolute;
+  left: 0;
+  top: -4px;
+
+  color: var(--primary-text-color);
+
+  transform: translateY(-100%);
+}
+
+.feedback .form-input {
+  width: 100%;
+  min-height: 40px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  color: var(--black-color);
+
+  outline: none;
+
+  transition: border-color var(--animation-duration) var(--animation-function);
+}
+
+.feedback .icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+
+  width: 18px;
+  height: 18px;
+
+  transform: translateY(-50%);
+
+  transition: color var(--animation-duration) var(--animation-function);
+}
+
+.feedback .form-input:focus-within {
+  border: 1px solid var(--primary-color);
+}
+
+.feedback .form-label:focus-within {
+  color: var(--primary-color);
 }
 
 /* =====================Main for page Portfolio===================== */
