--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,6 @@ body.modal-open {
   top: 50%;
 
   width: 528px;
-  height: 521px;
   padding: 40px;
 
   border-radius: 4px;
@@ -714,22 +713,29 @@ body.modal-open {
   color: var(--title-text-color);
 }
 
-.feedback > .form-group {
+.feedback > .form-group-input,
+.feedback > .form-group-area {
   position: relative;
 }
 
-.feedback > .form-group:not(:last-of-type) {
+.feedback > .form-group-input {
   margin-bottom: 28px;
 }
 
-.feedback .form-label {
+.feedback > .form-group-area {
+  margin-bottom: 20px;
+}
+
+.form-group-input .form-label,
+.form-group-area .form-label {
   font-size: 12px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   color: var(--black-color);
 }
 
-.feedback .label-text {
+.form-group-input .label-text,
+.form-group-area .label-text {
   position: absolute;
   left: 0;
   top: -4px;
@@ -739,11 +745,21 @@ body.modal-open {
   transform: translateY(-100%);
 }
 
-.feedback .form-input {
+.form-group-input .form-input {
   width: 100%;
   min-height: 40px;
   padding-left: 42px;
+}
 
+.form-group-area .form-area {
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+
+  resize: none;
+}
+.form-group-input .form-input,
+.form-group-area .form-area {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   color: var(--black-color);
@@ -753,7 +769,15 @@ body.modal-open {
   transition: border-color var(--animation-duration) var(--animation-function);
 }
 
-.feedback .icon {
+.form-group-area .form-area::placeholder {
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-group-input .icon {
   position: absolute;
   left: 12px;
   top: 50%;
@@ -766,11 +790,12 @@ body.modal-open {
   transition: color var(--animation-duration) var(--animation-function);
 }
 
-.feedback .form-input:focus-within {
+.form-group-input .form-input:focus-within,
+.form-group-area .form-area:focus-within {
   border: 1px solid var(--primary-color);
 }
 
-.feedback .form-label:focus-within {
+.form-group-input .form-label:focus-within {
   color: var(--primary-color);
 }
 
@@ -908,3 +933,89 @@ body.modal-open {
 
   color: var(--primary-text-color);
 }
+
+/* =============================================================== */
+
+.checkbox .form-label {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox .label-text {
+  margin-left: 7px;
+
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
+}
+
+.checkbox .link {
+  text-decoration-line: underline;
+
+  color: var(--primary-color);
+}
+
+.form-checkbox {
+  position: relative;
+
+  width: 16px;
+  height: 15px;
+
+  border-radius: 3px;
+  border: 2px solid var(--title-text-color);
+
+  transition: border var(--animation-duration) var(--animation-function);
+}
+
+.form-checkbox .icon {
+  position: absolute;
+  left: -2px;
+  top: -2px;
+
+  display: block;
+
+  width: 16px;
+  height: 15px;
+
+  fill: var(--primary-color);
+
+  opacity: 0;
+
+  transition: opacity var(--animation-duration) var(--animation-function);
+}
+
+.checkbox .form-input:checked + .form-checkbox {
+  border-color: transparent;
+}
+
+.checkbox .form-input:checked + .form-checkbox > .icon {
+  opacity: 1;
+}
+
+/* ===========================================Form button================================= */
+.form-group.wrapper {
+  margin-top: 30px;
+
+  text-align: center;
+}
+
+.feedback .button {
+  padding: 10px 52px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+
+  background: #188ce8;
+  border-radius: 4px;
+
+  transition: box-shadow var(--animation-duration) var(--animation-function);
+}
+
+.feedback .button:hover,
+.feedback .button:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+/* ====================================================================================== */
